--- a/1807.07136/MMIandMeasurementUpdate-9202020.tex
+++ b/1807.07136/MMIandMeasurementUpdate-9202020.tex
@@ -1,16 +1,57 @@
 %% LyX 2.2.3 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
-\documentclass[11pt,english]{article}
+\documentclass[12pt,english]{article}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
-\usepackage{geometry}
-\geometry{verbose,tmargin=1.5cm,bmargin=2cm,lmargin=1.75cm,rmargin=1.75cm}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \usepackage{mathtools}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{setspace}
-\setstretch{1.05}
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
@@ -40,7 +81,7 @@
 
 \title{Measurement and Quantum Dynamics in the Minimal Modal Interpretation
 of Quantum Theory\thanks{An updated version of this article can be found at\protect\\ \protect\phantom{x* ,} https://drive.google.com/file/d/14fjMeIW-u3byqO9GrCZtqxvH7s-hl2nk/view?usp=sharing}}
-
+\date{21 Sep 2020}
 \author{Jacob A. Barandes$^{1,}$\thanks{barandes@physics.harvard.edu} $\ $and
 David Kagan$^{2,}$\thanks{dkagan@umassd.edu}}
 \maketitle
@@ -460,7 +501,8 @@ After the measurement, the reduced density matrix of the subject system
 takes the form
 \begin{align}
 \hat{\rho}_{S}\left(\Delta t\right) & =\sum_{\mathclap{m_{1},m_{2}}}\Psi_{m_{1}}\Psi_{m_{2}}^{*}\left|m_{1}\left\rangle \right\langle m_{2}\right|\left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle \left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle \nonumber \\
- & =\sum_{m}\left|\Psi_{m}\right|^{2}\left|m\left\rangle \right\langle m\right|+\sum_{\mathclap{\substack{m_{1},m_{2}\\
+ & =\sum_{m}\left|\Psi_{m}\right|^{2}\left|m\left\rangle \right\langle m\right|+ \nonumber \\
+ & \qquad \sum_{\mathclap{\substack{m_{1},m_{2}\\
 m_{1}\neq m_{2}
 }
 }}\Psi_{m_{1}}\Psi_{m_{2}}^{*}\left|m_{1}\left\rangle \right\langle m_{2}\right|\left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle \left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle ,\label{eq:postSDM}
@@ -481,10 +523,16 @@ of their degrees of freedom as
 |E\left(``m"\right)\rangle & =|e_{1}\left(``m"\right)\rangle|e_{2}\left(``m"\right)\rangle\cdots|e_{N_{E}}\left(``m"\right)\rangle.
 \end{align*}
 Then
-\begin{align*}
-\left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle  & =\left\langle a_{1}\left(``m_{2}"\right)|a_{1}\left(``m_{1}"\right)\right\rangle \cdots\left\langle a_{N_{A}}\left(``m_{2}"\right)|a_{N_{A}}\left(``m_{1}"\right)\right\rangle \sim\exp\left(-N_{A}\times f_{A}\left(\gamma_{A}\Delta t\right)\right),\\
-\left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle  & =\left\langle e_{1}\left(``m_{2}"\right)|e_{1}\left(``m_{1}"\right)\right\rangle \cdots\left\langle e_{N_{E}}\left(``m_{2}"\right)|e_{N_{E}}\left(``m_{1}"\right)\right\rangle \sim\exp\left(-N_{E}\times f_{E}\left(\gamma_{E}\Delta t\right)\right),
-\end{align*}
+\begin{multline*}
+\left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle  = 
+\left\langle a_{1}\left(``m_{2}"\right)|a_{1}\left(``m_{1}"\right)\right\rangle \cdots\\
+\left\langle a_{N_{A}}\left(``m_{2}"\right)|a_{N_{A}}\left(``m_{1}"\right)\right\rangle \sim\exp\left(-N_{A}\times f_{A}\left(\gamma_{A}\Delta t\right)\right)
+\end{multline*}
+\begin{multline*}
+\left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle  = 
+\left\langle e_{1}\left(``m_{2}"\right)|e_{1}\left(``m_{1}"\right)\right\rangle \cdots \\
+\left\langle e_{N_{E}}\left(``m_{2}"\right)|e_{N_{E}}\left(``m_{1}"\right)\right\rangle \sim\exp\left(-N_{E}\times f_{E}\left(\gamma_{E}\Delta t\right)\right),
+\end{multline*}
 where $\gamma_{A}$ and $\gamma_{E}$ are the interaction rates for
 each degree of freedom, and where the functions $f_{A}$ and $f_{E}$
 are increasing functions of their arguments at least during the duration
@@ -505,7 +553,8 @@ basis in the measurement basis,
  & =\psi_{s,m_{s}}\left(\Delta t\right)|m_{s}\rangle+O\left(e^{-N\gamma\Delta t}\right)\times\sum_{\mathclap{\substack{m\\
 m\neq m_{s}
 }
-}}\sigma_{s,m}\left(\Delta t\right)|m\rangle,\ \ \ \ \ \left|\psi_{s,m_{s}}\left(\Delta t\right)\right|\sim1-O\left(e^{-N\gamma\Delta t}\right),\label{eq:sbasis}
+}}\sigma_{s,m}\left(\Delta t\right)|m\rangle, \nonumber\\
+& \qquad  \left|\psi_{s,m_{s}}\left(\Delta t\right)\right|\sim1-O\left(e^{-N\gamma\Delta t}\right),\label{eq:sbasis}
 \end{align}
 where the second equality captures the exponential suppression of
 all but one of the measurement-basis states. Therefore,
@@ -561,13 +610,15 @@ process is exponentially close to a corresponding measurement-outcome
 state $|m_{s}\rangle$. According to the minimal modal interpretation,
 the conditional probability for the system to be in $|s;\Delta t\rangle$
 given its initial state $|\Psi\rangle$ is given by
-\begin{equation}
-p\left(s;\Delta t|\Psi;0\right)=\textrm{Tr}_{S}\left[\hat{P}\left(s;\Delta t\right)\mathcal{E}_{S}^{\Delta t}\left\{ \left|\Psi\left\rangle \right\langle \Psi\right|\right\} \right]=\textrm{Tr}_{S}\left[\hat{P}\left(s;\Delta t\right)\hat{\rho}_{S}\left(\Delta t\right)\right]=\left\langle s;\Delta t\left|\hat{\rho}_{S}\left(\Delta t\right)\right|s;\Delta t\right\rangle .
-\end{equation}
+\begin{multline}
+p\left(s;\Delta t|\Psi;0\right)=\textrm{Tr}_{S}\left[\hat{P}\left(s;\Delta t\right)\mathcal{E}_{S}^{\Delta t}\left\{ \left|\Psi\left\rangle \right\langle \Psi\right|\right\} \right]=\textrm{Tr}_{S}\left[\hat{P}\left(s;\Delta t\right)\hat{\rho}_{S}\left(\Delta t\right)\right]=\\
+\left\langle s;\Delta t\left|\hat{\rho}_{S}\left(\Delta t\right)\right|s;\Delta t\right\rangle .
+\end{multline}
 Substituting (\ref{eq:postSDM}) yields
-\[
-p\left(s;\Delta t|\Psi;0\right)=\sum_{\mathclap{m_{1},m_{2}}}\Psi_{m_{1}}\Psi_{m_{2}}^{*}\left\langle s;\Delta t|m_{1}\right\rangle \left\langle m_{2}|s;\Delta t\right\rangle \left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle \left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle .
-\]
+\begin{multline*}
+p\left(s;\Delta t|\Psi;0\right)=\sum_{\mathclap{m_{1},m_{2}}}\Psi_{m_{1}}\Psi_{m_{2}}^{*}\left\langle s; \Delta t|m_{1}\right\rangle\\
+ \left\langle m_{2}|s;\Delta t\right\rangle \left\langle A\left(``m_{2}"\right)|A\left(``m_{1}"\right)\right\rangle \left\langle E\left(``m_{2}"\right)|E\left(``m_{1}"\right)\right\rangle .
+\end{multline*}
 Equation (\ref{eq:sbasis}) implies that
 \begin{equation}
 \left\langle s;\Delta t|m_{s'}\right\rangle =\delta_{ss'}+\rho_{ss'}O\left(e^{-N\gamma\Delta t}\right)
@@ -755,17 +806,17 @@ to be sufficiently well-defined.
 \begin{centering}
 \subfloat[\label{fig:BlochSphere}Depiction of the Bloch sphere.]{
 \begin{centering}
-\includegraphics[scale=0.4]{Bloch.png}
+\includegraphics[scale=0.3]{Bloch.png}
 \par\end{centering}
 
 }\subfloat[\label{fig:BlochSection}Cross-section of the Bloch sphere.]{
 \begin{centering}
-\includegraphics[scale=0.4]{BlochSection.png}
+\includegraphics[scale=0.3]{BlochSection.png}
 \par\end{centering}
 
 }\subfloat[\label{fig:ontictraj}An ontic trajectory.]{
 \begin{centering}
-\includegraphics[scale=0.5]{QTraj3.png}
+\includegraphics[scale=0.3]{QTraj3.png}
 \par\end{centering}
 
 }
@@ -1378,9 +1429,10 @@ consisting of $n$ disjoint subsystems $Q_{1},\ldots,Q_{n}$ by replacing
 $Q_{2}\to Q_{2}+\cdots+Q_{n}$ and $\hat{1}_{Q_{2}}\to\hat{1}_{Q_{2}}\otimes\cdots\otimes\hat{1}_{Q_{n}}$.
 Following steps analogous to those detailed above for the bipartite
 case, one derives the $n$-subsystem joint conditional probabilities
-\begin{equation}
-p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\text{\ensuremath{\ldots},}i_{n};t'|w;t\right)=\textrm{Tr}_{W}\left[\left(\hat{P}_{Q_{1}}\left(i_{1};t'\right)\otimes\cdots\otimes\hat{P}_{Q_{n}}\left(i_{n};t'\right)\right)\mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \right].
-\end{equation}
+\begin{multline}
+p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\text{\ensuremath{\ldots},}i_{n};t'|w;t\right)=\\
+\textrm{Tr}_{W}\left[\left(\hat{P}_{Q_{1}}\left(i_{1};t'\right)\otimes\cdots\otimes\hat{P}_{Q_{n}}\left(i_{n};t'\right)\right)\mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \right].
+\end{multline}
 
 Of course, in order for these quantities to qualify as proper conditional
 probabilities, they should be non-negative and sum to unity. What
@@ -1395,9 +1447,10 @@ and the time-evolved projection operator $\mathcal{E}_{W}^{t'\leftarrow t}\left\
 are both manifestly positive semidefinite. If we call the first positive
 semidefinite operator $\hat{A}$ and the second $\hat{B}$, then $\sqrt{\hat{A}}$
 and $\sqrt{\hat{B}}$ are also positive semidefinite and we have
-\[
-\textrm{Tr}\left[\hat{A}\hat{B}\right]=\textrm{Tr}\left[\sqrt{\hat{A}}\sqrt{\hat{A}}\sqrt{\hat{B}}\sqrt{\hat{B}}\right]=\textrm{Tr}\left[\sqrt{\hat{B}}\sqrt{\hat{A}}\sqrt{\hat{A}}\sqrt{\hat{B}}\right]=\textrm{Tr}\left[\left(\sqrt{\hat{A}}\sqrt{\hat{B}}\right)^{\dagger}\left(\sqrt{\hat{A}}\sqrt{\hat{B}}\right)\right]\geq0.
-\]
+\begin{multline}
+\textrm{Tr}\left[\hat{A}\hat{B}\right]=\textrm{Tr}\left[\sqrt{\hat{A}}\sqrt{\hat{A}}\sqrt{\hat{B}}\sqrt{\hat{B}}\right]=\\
+\textrm{Tr}\left[\sqrt{\hat{B}}\sqrt{\hat{A}}\sqrt{\hat{A}}\sqrt{\hat{B}}\right]=\textrm{Tr}\left[\left(\sqrt{\hat{A}}\sqrt{\hat{B}}\right)^{\dagger}\left(\sqrt{\hat{A}}\sqrt{\hat{B}}\right)\right]\geq0. \nonumber
+\end{multline}
 Therefore, our conditional probabilities are non-negative, as claimed:
 \begin{equation}
 p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\ldots,i_{n};t'|w;t\right)\geq0.
@@ -1405,7 +1458,8 @@ p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\ldots,i_{n};t'|w;t\right)\geq0.
 \item Unit measure: Taking a fixed parent-system ontic state $w$ and summing
 over all the final subsystem states $i_{1},\ldots,i_{n}$, we find
 \begin{align*}
-\sum_{\mathclap{i_{1},\ldots,i_{n}}}p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\ldots,i_{n};t'|w;t\right) & =\sum_{\mathclap{i_{1},\ldots,i_{n}}}\textrm{Tr}_{W}\left[\left(\hat{P}_{Q_{1}}\left(i_{1};t'\right)\otimes\cdots\otimes\hat{P}_{Q_{n}}\left(i_{n};t'\right)\right)\mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \right]\\
+\sum_{\mathclap{i_{1},\ldots,i_{n}}}p_{Q_{1},\ldots,Q_{n}|W}\left(i_{1},\ldots,i_{n};t'|w;t\right) & =\sum_{\mathclap{i_{1},\ldots,i_{n}}}\textrm{Tr}_{W}\bigl[\left(\hat{P}_{Q_{1}}\left(i_{1};t'\right)\otimes\cdots\otimes\hat{P}_{Q_{n}}\left(i_{n};t'\right)\right)\\
+& \qquad \qquad \mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \bigr]\\
  & =\textrm{Tr}_{W}\left[\left(\hat{1}_{Q_{1}}\otimes\cdots\otimes\hat{1}_{Q_{n}}\right)\mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \right]\\
  & =\textrm{Tr}_{W}\left[\mathcal{E}_{W}^{t'\leftarrow t}\left\{ \hat{P}_{W}\left(w;t\right)\right\} \right]\\
  & =1.
@@ -1413,6 +1467,8 @@ over all the final subsystem states $i_{1},\ldots,i_{n}$, we find
 \end{enumerate}
 \noindent 
 %
+\newpage
+\raggedright
 \begin{thebibliography}{10}
 \bibitem{Dirac}P. A. M. Dirac, \emph{The Principles of Quantum Mechanics}.
 Oxford University Press, 1st edition, 1930.
@@ -1437,7 +1493,7 @@ Theory in Terms of ``Hidden'' Variables. II''. \emph{Physical}
 doi:10.1103/PhysRev.85.180.
 
 \bibitem{DeWitt} B. S. DeWitt, ``Quantum mechanics and reality''.
-\emph{Physics} \emph{Today}, 23(9):30-35, September 1970. URL: http://scitation.aip.org/content/aip/magazine/physicstoday/article/23/9/10.1063/1.3022331,
+\emph{Physics} \emph{Today}, 23(9):30-35, September 1970. URL: \url{http://scitation.aip.org/content/aip/magazine/physicstoday/article/23/9/10.1063/1.3022331},
 doi:10.1063/ 1.3022331.
 
 \bibitem{Everett}H. Everett III, ````Relative state'' formulation
