--- a/2208.05018/Issues2022.tex
+++ b/2208.05018/Issues2022.tex
@@ -1,6 +1,6 @@
 %\documentclass[14pt]{extreport}
-\documentclass[fleqn,usenatbib]{mnras}
-\usepackage{newtxtext,newtxmath}
+\documentclass[fleqn,12pt]{article}
+\usepackage[authoryear]{natbib}
 \usepackage[T1]{fontenc}
 \DeclareRobustCommand{\VAN}[3]{#2}
 \let\VANthebibliography\thebibliography
@@ -21,17 +21,65 @@
 %\usepackage{cleveref}
 %\usepackage{amssymb}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[largesc]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\usepackage[cal=cm]{mathalfa}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\bibliographystyle{apalike}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \usepackage[utf8]{inputenc}
+\begin{document}
 
 \title{Anomalies in Physical Cosmology}
-\author[P. J. E. Peebles]{P. J. E. Peebles,$^{1}$\thanks{E-mail: pjep@Princeton.edu}\\
-$^{1}$Joseph Henry Laboratories, Princeton University, Princeton, NJ 08544, USA\\
+\author{P. J. E. Peebles,$^{1}$\thanks{E-mail: pjep@Princeton.edu}\\
+$^{1}$Joseph Henry Laboratories, \\
+Princeton University, Princeton, NJ 08544, USA\\
 pjep@princeton.edu
 }
+\date{9 Aug 2022}
 
 %\pubyear{2022}
 \setcounter{tocdepth}{3}
-\begin{document}
 
 %\tableofcontents
 %\label{firstpage}
@@ -40,9 +88,10 @@ pjep@princeton.edu
 \begin{abstract} 
 The $\Lambda$CDM cosmology passes demanding tests that establish it as a good approximation to reality. The theory is incomplete, of course, and open issues are being examined in active research programs. I offer a review of less widely discussed anomalies that might also point to hints to a still better cosmological theory if more closely examined.
 \end{abstract}
-\begin{keywords}
-{cosmological tests; astrophysical anomalies; Local Supercluster; supermassive black holes; cosmic structure}
-\end{keywords}
+
+%\begin{keywords}
+%{cosmological tests; astrophysical anomalies; Local Supercluster; supermassive black holes; cosmic structure}
+%\end{keywords}
 
 \section{\bf Introduction}\label{intro}
 
@@ -688,7 +737,6 @@ The standard $\Lambda$CDM theory passes demanding well-checked tests that reenfo
 I am grateful to colleagues for guidance to issues arising. They include Jean Brodie and Elaina Tolstoy for advice about dwarf galaxies; Antonaldo Diaferio and Garry Angus or advice on the generalization of MOND; Simon Driver and Samir Salim for education about galaxy morphologies; Mike Hudson, Tod Lauer, and Kostas Migkas for explanations of cluster bulk flow measurements; Manoj Kaplinghat for discussions of supermassive black holes; Roya Mohayaee and Subir Sarkar for discussions of the kinematic dipole; Dylan Nelson for discussions of simulations of galaxy formation; Patrick Ogle for instruction on supermassive spiral galaxies; and Xavier Prochaska for comments on observations of extragalactic magnetic fields. I am particuarly indebted to Michael Strauss for guidance to the phenomena and Neil Turok for guidance to the theory. Turok encouraged me to write this considerable revision of the draft in Peebles (2021).
 
 \begin{thebibliography}{}
-
 \bibitem[\protect\citeauthoryear{Abbott et al.}{2020}]{2020PhRvL.125j1102A} Abbott R., Abbott T.~D., Abraham S., Acernese F., Ackley K., Adams C., Adhikari R.~X., et al., 2020, PhRvL, 125, 101102
 
 %\bibitem[\protect\citeauthoryear{Abbott et al.}{2021}]{2021ApJS..255...20A} Abbott T.~M.~C., Adam{\'o}w M., Aguena M., Allam S., Amon A., Annis J., Avila S., et al., 2021, ApJS, 255, 20 %OKK
