--- a/2203.02631v1/TWF_51-100_arxiv_1.tex
+++ b/2203.02631v1/TWF_51-100_arxiv_1.tex
@@ -9,19 +9,6 @@
 \usepackage{booktabs}
 \def\tightlist{}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
 %\usepackage{amssymb}
 \usepackage[full]{textcomp}
 \usepackage[]{XCharter}% lining figures in math, osf in text
@@ -29,10 +16,8 @@ bookmarksopenlevel=10
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm,scr=esstix]{mathalpha}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\tolerance=2000
-\hbadness=2000
 %\usepackage[small]{titlesec}
 
 \input{../helpers/fix-underbrace.tex}
@@ -87,9 +72,21 @@ bookmarksopenlevel=10
 
 \setcounter{section}{50}
 
-
 \usepackage[main]{embedall}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 \begin{document}
 
 \begin{titlepage}
