--- a/2101.04168v3/TWF_1-50_arxiv_1.tex
+++ b/2101.04168v3/TWF_1-50_arxiv_1.tex
@@ -4,19 +4,6 @@
 \usepackage{booktabs}
 \def\tightlist{}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
 %\usepackage{amssymb}
 \usepackage[full]{textcomp}
 \usepackage[]{XCharter}% lining figures in math, osf in text
@@ -24,10 +11,8 @@ bookmarksopenlevel=10
 \usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=cm,scr=esstix]{mathalpha}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\tolerance=2000
-\hbadness=2000
 %\usepackage[small]{titlesec}
 
 \input{../helpers/fix-underbrace.tex}
@@ -36,8 +21,6 @@ bookmarksopenlevel=10
 \usepackage{cite}
 \sloppy
 \raggedbottom
-
-\usepackage[numbered]{bookmark}
 
 \renewcommand{\texttt}[1]{%
   \begingroup
@@ -79,8 +62,22 @@ bookmarksopenlevel=10
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \usepackage[main]{embedall}
+\usepackage[numbered]{bookmark}
 
 \begin{document}
 
