--- a/helpers/fixarxiv-palatino-newpx.tex
+++ b/helpers/fixarxiv-palatino-newpx.tex
@@ -5,7 +5,7 @@
 \usepackage[largesc]{newpxtext}
 \usepackage[smallerops]{newpxmath}
 \usepackage[cal=cm]{mathalfa}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
