--- a/1111.3328/nogo_arxiv3.tex
+++ b/1111.3328/nogo_arxiv3.tex
@@ -24,12 +24,14 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
-\usepackage{MnSymbol}
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\raggedbottom
+\sloppy
+\pagestyle{plain}
 \usepackage[small]{titlesec}
 
 \begin{document}
@@ -49,7 +51,6 @@ TW20 0EX, United Kingdom}
 \date{April 11, 2012}
 
 \begin{abstract}
-\baselineskip=13pt
 Quantum states are the key mathematical objects in quantum theory. It is therefore surprising that physicists have been unable to agree on what a quantum state truly represents. One possibility is that a pure quantum state corresponds directly to reality. However, there is a long history of suggestions that a quantum state (even a pure state) represents only knowledge or information about some aspect of reality. Here we show that any model in which a quantum state represents mere information about an underlying physical state of the system, and in which systems that are prepared independently have independent physical states, must make predictions which contradict those of quantum theory.
 \end{abstract}
 \maketitle
