--- a/landsman-font-testing/0506082-lucida.tex
+++ b/landsman-font-testing/0506082-lucida.tex
@@ -7,24 +7,11 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
 \usepackage{amssymb}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
-\usepackage{eulervm}
+%\usepackage{eulervm}
 
 \linespread{1.1}
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.7in, bottom=1in]{geometry}
@@ -71,6 +58,21 @@ bookmarksopenlevel=10
 %\oddsidemargin = 3 cm
 %\evensidemargin = 3 cm
 \setcounter{secnumdepth}{5}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 %
 % general commands
 %
