--- a/helpers/fixarxiv-lucida-euler.tex
+++ b/helpers/fixarxiv-lucida-euler.tex
@@ -18,7 +18,7 @@ bookmarksopenlevel=10
 \usepackage[altbullet]{lucidabr}
 \usepackage{eulervm}
 \linespread{1.05}
-\usepackage[papersize={7.0in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={7.0in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 \sloppy
 \raggedbottom
 \usepackage[small]{titlesec}
