--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -3,7 +3,7 @@
 \usepackage{textcomp}
 \usepackage[altbullet]{lucidabr}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
