--- a/1309.0724/1309.0724.tex
+++ b/1309.0724/1309.0724.tex
@@ -1,24 +1,47 @@
 \documentclass [12pt]{revtex4}
 
-\usepackage{mathpazo}
-\linespread{1.1}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,pagecolor=blue
 ,linktocpage=true]{hyperref}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[letterpaper, margin=1.2in]{geometry}
-\sloppy
 
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 \usepackage{amssymb}
 
 \usepackage{amsmath}
@@ -37,7 +60,7 @@ bookmarksopenlevel=10
 \date{September 4, 2013}
 
 \begin{abstract}
-
+\baselineskip=13pt
 The quantum theory of measurement has been a matter of debate for
 over eighty years. Most of the discussion has focused on theoretical
 issues with the consequence that other aspects (such as the
