--- a/1609.09311/SGE_revisited.tex
+++ b/1609.09311/SGE_revisited.tex
@@ -1,14 +1,44 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage[round]{natbib}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage{amsmath,amssymb}
+
+
+%\usepackage{amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\linespread{1.05}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/cmrsum}
+
+\usepackage[small]{titlesec}
+\usepackage{microtype}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
 
 \usepackage[normalem]{ulem}
 
 \usepackage{graphicx}
-
-\usepackage{amsmath,amssymb}
 
 \usepackage[german,english]{babel}
 
@@ -34,7 +64,7 @@ Institute for Nuclear Physics, Goethe-University Frankfurt, Frankfurt, Germany.}
 \affil[3]{Oakland, CA, USA.} 
 \affil[4]{Institute of Mathematics, Johannes Gutenberg-University Mainz, Mainz, Germany.}  
 
-\date{Version of \today}
+\date{Version of 29 Sep 2016}
 
 \maketitle
 
