--- a/quant-ph-0511276/SetTnov.tex
+++ b/quant-ph-0511276/SetTnov.tex
@@ -152,7 +152,7 @@ trajectories  \cite{deBroglie_1951} as we formerly did in the case
 of Young's double slit experiment \cite{Gondran_2005}.  These
 trajectories not only provide a natural explanation for the impact
 of particles, but also describe the spin quantization along the
-z-axis. It is then possible to propose a clear explanation of
+$z$-axis. It is then possible to propose a clear explanation of
 measurement in the Stern-Gerlach experiment.
 
 
@@ -177,14 +177,14 @@ experiment}
 Silver atoms contained in the oven E (Fig.~\ref{fig:schema-SetG})
 are heated to a high temperature and escape through a narrow
 opening. A second aperture, T, selects those atoms whose velocity,
-$\textbf{v}_0$, is parallel to the y-axis. The atomic beam crosses
+$\textbf{v}_0$, is parallel to the $y$-axis. The atomic beam crosses
 the gap of the electromagnet $A_{1}$ before condensing on the
 screen, $P_{1}$ . The magnetic moments of the silver atoms before
 crossing the electromagnet are oriented randomly (isotropically).
 In the beam, we represent the atoms by their wave function ; one
 can suppose that at the entrance to the electromagnet, $A_{1}$,
 and at the initial time $t=0$, each atom prepared can be described
-by a Gaussian spinor in x and z:
+by a Gaussian spinor in $x$ and $z$:
 \begin{equation}\label{eq:psi-0}
     \Psi^{0}(x,z) = (2\pi\sigma_{0}^{2})^{-\frac{1}{2}}
                       e^{-\frac{(z^2+x^2)}{4\sigma_0^2}}
@@ -192,13 +192,13 @@ by a Gaussian spinor in x and z:
                             {i\sin\frac{\theta_0}{2}e^{-i\frac{\varphi_0}{2}}}.
 \end{equation}
 
-The variable y will be treated in a classical way with $y= vt$.
+The variable $y$ will be treated in a classical way with $y= vt$.
 For a silver atom, one has $m = 1.8\times 10^{-25}$ kg, $v_0 =
 500$\ m/s(with T=1000°K), $\sigma_0$=10$^{-4}$m.
 
 In (\ref{eq:psi-0}), $\theta_0$ and $\varphi_{0}$ are the polar
 angles characterizing the initial orientation of the magnetic
-moment, $\theta_0$ corresponds to the angle with the z-axis. This
+moment, $\theta_0$ corresponds to the angle with the $z$-axis. This
 initial orientation being randomized, one can suppose that
 $\theta_0$ is drawn in a uniform way from $[0,\pi]$ and that
 $\varphi_0$ is drawn in a uniform way from $[0,2\pi]$. In this
@@ -232,7 +232,7 @@ $\boldsymbol\sigma=(\sigma_{x},\sigma_{y},\sigma_{z})$ corresponds
 to the three Pauli matrices.
 
 The particle first enters an electromagnetic field $\textbf{B}$
-directed along the z-axis, $B_{x}=B'_{0} x$, $B_{y}=0$,
+directed along the $z$-axis, $B_{x}=B'_{0} x$, $B_{y}=0$,
 $B_{z}=B_{0} -B'_{0} z$, with $B_{0}=5$ Tesla and $B'_{0}=\left|
 \frac{\partial B}{\partial z}\right| = 10^3$ Tesla/m over a length
 $\Delta l=1~cm$. Such a vector $\textbf{B}$ satisfies Maxwell's
@@ -283,9 +283,9 @@ $\varphi_0$). So one gets:
 \begin{eqnarray}\label{eq:densitédanschampmagnétique}
     \rho(z,t) &=
      (2\pi\sigma_0^2)^{-\frac{1}{2}}
-                  \frac{1}{2}\left(e^{-\frac{(z-\frac{\mu_{B} B'_{0}}{2 m}t^{2})^2}{2\sigma_0^2}}+
+                  \frac{1}{2}\biggl(e^{-\frac{(z-\frac{\mu_{B} B'_{0}}{2 m}t^{2})^2}{2\sigma_0^2}}+
                   e^{-\frac{(z+\frac{\mu_{B} B'_{0}}{2
-                  m}t^{2})^2}{2\sigma_0^2}}\right).
+                  m}t^{2})^2}{2\sigma_0^2}}\biggr).
 \end{eqnarray}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -329,14 +329,14 @@ One can deduce (as previously) the atom density $\rho$ at (z,$t+
 \begin{eqnarray}\label{eq:densitéaprèschampmagnétique}
     \rho(z,t+ \Delta t) &=
      (2\pi\sigma_0^2)^{-\frac{1}{2}}
-                  \frac{1}{2}\left(e^{-\frac{(z-z_{\Delta}- ut)^2}{2\sigma_0^2}}+
+                  \frac{1}{2}\biggl(e^{-\frac{(z-z_{\Delta}- ut)^2}{2\sigma_0^2}}+
                   e^{-\frac{(z+z_{\Delta}+
-                  ut)^2}{2\sigma_0^2}}\right).
+                  ut)^2}{2\sigma_0^2}}\biggr).
 \end{eqnarray}
 
 
 Figure ~\ref{fig:ddp-SetG} shows the probability density of the
-silver atoms as a function of z at several values of t ( the plots
+silver atoms as a function of z at several values of $t$ ( the plots
 are labelled with $y = vt$). The beam separation does not appear
 at the end of the magnetic field (1 cm), but 10 cm further along.
 \begin{figure}[H]
@@ -377,13 +377,16 @@ This result explains why the semi-classical description of this
 Stern-Gerlach experiment is usually used. This semi-classical
 description starts from the quantization of spin and deduces from
 Ehrenfest's Theorem the average trajectories of the spinors with
-initial spinors $\Psi_{+}^{0}=(2\pi\sigma_{0}^{2})^{-\frac{1}{2}}
+initial spinors 
+$$\Psi_{+}^{0}=(2\pi\sigma_{0}^{2})^{-\frac{1}{2}}
                       e^{-\frac{(z^2+x^2)}{4\sigma_0^2}}
                       \binom{1}
-                            {0}$ and $\Psi_{-}^{0}=(2\pi\sigma_{0}^{2})^{-\frac{1}{2}}
+                            {0}$$
+                            and $$\Psi_{-}^{0}=(2\pi\sigma_{0}^{2})^{-\frac{1}{2}}
                       e^{-\frac{(z^2+x^2)}{4\sigma_0^2}}
                       \binom{0}
-                            {1}$ respectively.
+                            {1}$$
+  respectively.
 Note that this is a statistical interpretation, and the
 individuality of the atoms represented by the angles $\theta_{0}$
 and $\varphi_{0}$ is lost. However experimentally, one does not
