--- a/quant-ph-0010079/stern3.tex
+++ b/quant-ph-0010079/stern3.tex
@@ -148,7 +148,7 @@ Thus, a force in the x-direction also appears which would be
 proportional to $dB_x/dx \mu_x$.
 
 
->From the expression (\ref{Fzx}), the force acting on a particle with a certain 
+From the expression (\ref{Fzx}), the force acting on a particle with a certain 
 spin state can be calculated. If we consider the scattering of particles which
 have a given spin projection $m$ along the z-axis, they will suffer a force
 that will be calculated as the expectation value
@@ -236,10 +236,10 @@ evolution operator along the classical trajectory.
 \item Consider small desviations from the classical 
 trajectory. Evalute the operator $\Delta$, defined in \cite{2}, which
 describes the dependence of the cross section matrix on the initial state.
-\item Obtain the CIS $|n>$ diagonalizing the cross section matrix, which is
+\item Obtain the CIS $|n\rangle$ diagonalizing the cross section matrix, which is
 equivalent to diagonalize the operator $\Delta$. 
 \item Evaluate the  classical trajectories ${\bf r}_n(t)$ for each CIS, 
-the evolution operators $U_n(t,t_0)$, and the final states $|\tilde{n}>$.
+the evolution operators $U_n(t,t_0)$, and the final states $|\tilde{n}\rangle$.
 If the final states are orthogonal, then the calculated cross section matrix 
 will be diagonal, and the self-consistency would have been achieved. 
 If not, the CIS should be  recalculated as the eigenstates of the cross section
@@ -401,7 +401,7 @@ our initial choice for  CIS.  As we will see in the next section, these
 states are not modified as the particle moves along the classical trajectory,
 and so they are the Coherent Internal States of our problem.
 
-The original states $|m;L>$, which have a definite spin 
+The original states $|m;L \rangle$, which have a definite spin 
 projection $m$ along the laboratory fixed $z$-axis, are not 
 CIS. To describe the evolution of these states, they should be expanded in 
 terms of the CIS, by means of the expression: 
@@ -439,10 +439,10 @@ kinetic energy, and
 \ee
 is the evolution operator of a particle in magnetic field along the trajectory
 $\vec r(t)$.
-In this expression, $| m \rangle$ is one of the CIS, and $|m(f)>$ is the final
+In this expression, $| m \rangle$ is one of the CIS, and $|m(f)\rangle$ is the final
 state, defined by
 \be
-|m(f)> = U_B(\vec r_m(t);t_f,t_0) | m \rangle 
+|m(f)\rangle = U_B(\vec r_m(t);t_f,t_0) | m \rangle 
 \ee
 The classical trajectory $\vec r_m(t)$ is obtained
  imposing the stationary phase condition in (\ref{propa}),  
@@ -455,16 +455,16 @@ This  leads in a strightforwad way to:
 {d \vec r_m(t) \over dt}\arrowvert_{t=t_0} &=& { \vec{p}_0 \over M} 
 \nonumber \\
 {d^2  \vec r_m(t) \over dt^2} & = & - \frac{1}{M} 
-< m(t)| \frac{ \partial}{ \partial \vec{r}}
-(\vec{ \mu} \cdot \vec{B}(\vec r)) |_{\vec r = \vec r_m(t)} | m(t)>
+\langle m(t)| \frac{ \partial}{ \partial \vec{r}}
+(\vec{ \mu} \cdot \vec{B}(\vec r)) |_{\vec r = \vec r_m(t)} | m(t)\rangle
  \label{cla}
 \ea
 where the state at the instant $t$ is given by 
-$|m(t)> = U_B(\vec r_m(t);t,t_0) | m \rangle$. These  equations describe 
+$|m(t)\rangle = U_B(\vec r_m(t);t,t_0) | m \rangle$. These  equations describe 
 the motion of a classical particle with a magnetic moment $\vec \mu(t)
-= \langle m(t)|\vec \mu|m(t)>$ moving in the inhomogeneous magnetic field 
+= \langle m(t)|\vec \mu|m(t)\rangle$ moving in the inhomogeneous magnetic field 
 $ \vec{B}(\vec r)$. However, it should be stressed that this interpretation is
-only meaningful for internal states $|m(t)>$ that evolve from a CIS state
+only meaningful for internal states $|m(t)\rangle$ that evolve from a CIS state
 $| m \rangle$ at $t=t_0$.
 
 We observe that in the $y$ direction we have a constant  motion given by
@@ -472,8 +472,8 @@ $ y_f = y_0 +(t_f - t_0) \frac{p_{0}}{M} $ and in the $x, z$ directions the
 motion is accelerated and the force is  proportional to $B_1$ because:
 \be 
 \langle m(t)|\frac{ \partial}{ \partial \vec{r}} (\vec{ \mu} \cdot \vec{B}(\vec r))
-|m(t)> 
-=  - \mu_0 B_1(\langle m(t)|I_z|m(t)> \hat u_z - \langle m(t)|I_x|m(t)>  \hat u_x)
+|m(t)\rangle 
+=  - \mu_0 B_1(\langle m(t)|I_z|m(t)\rangle \hat u_z - \langle m(t)|I_x|m(t)\rangle  \hat u_x)
 \ee
 
  
@@ -485,11 +485,11 @@ It should be noticed that the trajectory of the particle, that initially is
 on $(x_0, z_0)$, is always along the line that joins this point with the
 point with coordinates $(x=0, z=B_0/B_1)$. Along this line, the direction of
 the magnetic field is fixed, although its magnitude will vary. The state
-$|m(t)>$ is given by the initial CIS $|m(t)>$ times a phase factor.
+$|m(t)\rangle$ is given by the initial CIS $|m(t)\rangle$ times a phase factor.
 The angle
 $\beta$ between the axes $z$ and $z'$ is constant. Thus, we have
 \be
-\langle m(t)|I_z|m(t)> = \cos(\beta(x_0,z_0)) \quad ; \quad \langle m(t)|I_x|m(t)>
+\langle m(t)|I_z|m(t)\rangle = \cos(\beta(x_0,z_0)) \quad ; \quad \langle m(t)|I_x|m(t)\rangle
  =  \sin(\beta(x_0,z_0)) 
 \ee
 
@@ -557,15 +557,15 @@ The angle $\beta(x,z)$ between $\vec B(x,z)$ and $\hat u_z$ is given by
 \be 
 \tan \beta (x,z) =  x B_1 /(B_0 - z B_1)
 \ee
-Note that the states  $|m;L>$ with spin projection $m$ along the 
+Note that the states  $|m;L \rangle$ with spin projection $m$ along the 
 laboratory fixed 
 $z$-axis are no longer
 the CIS. For a given value of $(x,z)$, the CIS are states $|m' \rangle$ which have
 a given spin projection $m'$ along the axis $z'$ which is paralell to  
-$\vec B(x,z)$. Then, the state $|m;L>$ will not give rise to a unique 
+$\vec B(x,z)$. Then, the state $|m;L \rangle$ will not give rise to a unique 
 trajectory,
 but to $2I+1$ trajectories which are characterized by the states
-$|m' \rangle$. The probability that the state $|m;L>$ follows the trajectory of 
+$|m' \rangle$. The probability that the state $|m;L \rangle$ follows the trajectory of 
 $|m' \rangle$ is simply  
 \be
 p(m,m') = |\langle m;L|m' \rangle|^2 = |d^I_{m,m'}(\beta(x,z))|^2.
@@ -573,7 +573,7 @@ p(m,m') = |\langle m;L|m' \rangle|^2 = |d^I_{m,m'}(\beta(x,z))|^2.
 
 We have considered the case of a spin-1 particle. It has three possible spin
 projections along the laboratory fixed $z$-axis, corresponding to the states
-$|m;L>$, for $m=-1,0,+1$. When a beam of particles with these spin states
+$|m;L \rangle$, for $m=-1,0,+1$. When a beam of particles with these spin states
 go through a Stern-Gerlach magnet, they will be deflected according to the
 value of the spin projection $m'$ along the $z'$-axis. The probability that
 the deflection of the particles is determined by the spin projection along
