--- a/quant-ph-0010079/stern3.tex
+++ b/quant-ph-0010079/stern3.tex
@@ -110,7 +110,7 @@ One starts with a beam of
 particles, in a certain spin state, moving initially along a straight line. 
 For the following discussion, 
 we will take the $y$-axis along the direction of the motion of the particles.
-The center of the beam corresponds to the coordinates $x=0, z=0$.
+The center of the beam corresponds to the coordinates $x=0$, $z=0$.
 The beam enters in a Stern-Gerlach magnet.
 Usually, the Stern-Gerlach magnets produce magnetic fields that are independent
 of $y$  and that do not have components in the
