--- a/1101.5819/paper.tex
+++ b/1101.5819/paper.tex
@@ -1,18 +1,56 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 
 
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{amsmath,amscd}
 \usepackage{url}
-\usepackage{citesort}
 
 
 
-\addtolength{\textwidth}{2.0cm}
-\addtolength{\hoffset}{-1.0cm}
-\addtolength{\textheight}{3.0cm}
-\addtolength{\voffset}{-1.5cm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 
@@ -66,6 +104,9 @@ Kardinaal Mercierplein 2, B--3000 Leuven, Belgium.\\
 E--mail: Ward.Struyve@fys.kuleuven.be.
 \end{center}
 
+\begin{center}
+30 Jan 2011
+\end{center}
 
 \begin{abstract}
 \noindent
@@ -73,6 +114,7 @@ The purpose of this paper is to present an overview of recent work on pilot-wave
 \end{abstract}
 
 
+\newpage
 
 \section{Introduction}
 The pilot-wave theory of \db\ and Bohm for non-relativistic system describes point-particles in physical 3-space, which move under the guidance of the wave function. This theory reproduces the predictions of standard quantum theory (at least in so far those are unambiguous), given a state of equilibrium. Here we are concerned with generalizations of this theory to quantum fields. The purpose is to give an overview of our recent work and to put it into context. Much of this overview is based on \cite{struyve10}, which contains a review and further development of field based approaches, on \cite{struyve06,struyve07b} (with H.\ Westman) which deals with a minimalist approach and on \cite{colin07} (with S.\ Colin) which deals with a Dirac sea approach.
