--- a/0707.3685/0707.3685.tex
+++ b/0707.3685/0707.3685.tex
@@ -95,6 +95,10 @@ Kardinaal Mercierplein 2, B--3000 Leuven, Belgium.\\
 E--mail: Ward.Struyve@fys.kuleuven.be.
 \end{center}
 
+\begin{center}
+17 Aug 2010
+\end{center}
+
 \begin{abstract}
 \noindent
 Pilot-wave theories provide possible solutions to the measurement problem. In such theories, quantum systems are not only described by the state vector, but also by some additional variables. These additional variables, also called beables, can be particle positions, field configurations, strings, etc. In this paper we focus our attention on pilot-wave theories in which the additional variables are field configurations. The first such theory was proposed by Bohm for the free electromagnetic field. Since Bohm, similar pilot-wave theories have been proposed for other quantum fields. The purpose of this paper is to present an overview and further development of these proposals. We discuss various bosonic quantum field theories such as the Schr{\"o}\-ding\-er field, the free electromagnetic field, scalar quantum electrodynamics and the Abelian Higgs model. In particular, we compare the pilot-wave theories proposed by Bohm and by Valentini for the electromagnetic field, finding that they are equivalent. We further discuss the proposals for fermionic fields by Holland and Valentini. In the case of Holland's model we indicate that further work is required in order to show that the model is capable of reproducing the standard quantum predictions. We also consider a similar model, which does not seem to reproduce the standard quantum predictions. In the case of Valentini's model we point out a problem that seems hard to overcome.
