--- a/1305.1280/Travis_Norsen.tex
+++ b/1305.1280/Travis_Norsen.tex
@@ -1519,6 +1519,7 @@ earlier draft.
 
 
 
+\raggedright
 \begin{thebibliography}{99}
 
 \bibitem{pwp} T. Norsen, ``The pilot-wave perspective on scattering
