--- a/1305.1280/Travis_Norsen.tex
+++ b/1305.1280/Travis_Norsen.tex
@@ -993,11 +993,11 @@ That the ``no hidden variables'' theorems of von Neumann, Jauch-Piron,
 and Gleason tacitly assume non-contextuality (or an even stronger and
 less innocent requirement) was first clearly pointed out in Bell's
 landmark 1966 paper, ``On the Problem of Hidden Variables in Quantum
-Mechanics.''  \cite{bell66}  (The paper, incidentally, was written in
+Mechanics'' \cite{bell66}. The paper, incidentally, was written in
 1964, prior to Bell's more famous 1964 paper proving what is now
 called ``Bell's Theorem'', but remained unpublished until 1966 
 due to an editorial
-accident.)  The somewhat more famous Kochen-Specker ``no hidden
+accident.  The somewhat more famous Kochen-Specker ``no hidden
 variables'' theorem, which appeared the year after Bell's paper, also
 assumes non-contextuality, as discussed in the beautiful review
 paper by Mermin \cite{ks, mermin}.  
