--- a/1704.08017/bm-190815.tex
+++ b/1704.08017/bm-190815.tex
@@ -6,7 +6,7 @@
 Roderich Tumulka\footnote{Fachbereich Mathematik, Eberhard-Karls-Universit\"at,
 	Auf der Morgenstelle 10, 72076 T\"ubingen, Germany. E-mail: roderich.tumulka@uni-tuebingen.de}
 }
-\date{August 15, 2019}
+\date{13 Oct 2021}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
