--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -31,7 +31,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.8in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=.6in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -358,7 +358,7 @@ which can be put into correspondence with parts of a mathematical
 formalism.  This assumption is necessary if an MWI is to have any
 useful content. It is an assumption made by Everett \cite{ev}: ``This paper
 \ldots postulates that a wave function \ldots supplies a complete
-matehmatical model for every \ldots system without exception.'' and
+mathematical model for every \ldots system without exception.'' and
 still more clearly by DeWitt \cite{dew}: ``The real world \ldots
 is faithfully represented solely by the following collection of 
 mathematical objects. \ldots The use of this word [faithfully] implies
